# tests-for-todomvc

./: .gitignore  README.rst  pyproject.toml
tests/: operations_at_filter_all_test.py  operations_at_filter_all_tests.py  test_workflow_poc.py  tests_at_filter_all.py  workflow_test.py
tests_for_todomvc/model/: __init__.py  todomvc.py
tests_for_todomvc/pages/: actions.py  browser.py
